<resources>
    <string name="app_name">MiniGames</string>
    <string name="game1">Tic Tac Toe</string>
    <string name="Restart">Restart</string>
    <string name="Undo">Undo</string>
    <string name="MainMenu">Main Menu</string>
    <string name="P1">Player 1</string>
    <string name="P2">Player 2</string>
    <string name="won">\u0020 has won</string>
    <string name="play">\u0020 can play</string>
    <string name="draw">Game is a draw</string>
    <string name="player_1_can_play">Player 1 can play</string>
    <string name="t1_hwin">You win.</string>
    <string name="t1_cwin">Computer win</string>
    <string name="t1_inital">Play</string>
    <string name="g1_t2_p2play">Player 2 can play</string>
    <string name="t2_p1play">Player 1 play</string>
    <string name="t2_p2won">Player 2 has won</string>
    <string name="t2_p1won">Player 1 has won</string>
    <string name="Game2">Reflex</string>
    <string name="score">Score</string>
    <string name="Start">Start</string>
    <string name="wait">Wait</string>
    <string name="avoid_this">Avoid this</string>
    <string name="click_this">Click this</string>
    <string name="click_me">Click me</string>
    <string name="avoid_me">Avoid me</string>
    <string name="hold_me">Hold me</string>
    <string name="ok">OK</string>
    <string name="press_start_to_play_the_game">Press Start to play the game.</string>
    <!--Bluetooth tic tac toe-->
    <string name="not_connected">Not connected</string>
    <string name="bt_not_enabled_leaving">Bluetooth not enabled</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="button_scan">Scan</string>
    <string name="none_paired">No devices paired</string>
    <string name="scanning">Scanning</string>
    <string name="select_device">Select device</string>
    <string name="none_found">No devicees found</string>
    <string name="insecure_connect">Insecure Connection</string>
    <string name="discoverable">Discoverable</string>
    <string name="secure_connect">Secure Connection</string>
    <string name="title_connected_to">Connected to %s</string>
    <string name="title_connecting">Connecting</string>
    <string name="title_not_connected">Connected</string>
    <string name="you_win">You Win</string>
    <string name="you_play">You can play</string>
    <string name="you_lose">You lose</string>
    <string name="bt_wait">Waiting for friend to play.</string>
    <string name="bt_waita_reply">Waiting for confirmation</string>
    <string name="bt_setUpConnection">Set Up connection</string>
</resources>
